services page only needs ontent now and fixing the spacing to be centered

--- a/style.css
+++ b/style.css
@@ -187,8 +187,143 @@ body{
     padding:20px;
 }
 
-/*columns section*/
-/*1*/
-.customNew{
-    background-color:#DC8126;
+/*ticker*/
+body { margin: 0; }
+
+.ticker-wrap {
+  width: 100%;
+  height: 80px;
+  margin: 0 auto;
+  overflow: hidden;
+  white-space: nowrap;
+  position: fixed;
+  bottom: 0;
+  height: 3.5rem;
+  background-color: #FFCA46; 
 }
+.ticker {
+  display: inline-block;
+  margin-top: 5px;
+  animation: marquee 20s linear infinite;
+}
+.item-collection-1 {
+  position: relative;
+  left: 0%;
+  animation: swap 20s linear infinite;
+}
+
+.item {
+  display: inline-block;
+  padding: 0 1rem;
+  font-size: 2rem;
+  color: black;   
+  font-weight: 800;
+  font-family: sans-serif;
+}
+
+/* Transition */
+@keyframes marquee {
+  0% {
+    transform: translateX(0)
+  }
+  100% {
+    transform: translateX(-100%)
+  }
+}
+
+@keyframes swap {
+  0%, 50% {
+    left: 0%;
+  }
+  50.01%,
+  100% {
+    left: 100%;
+  }
+}
+
+/*columns section*/
+.expand-column-wrapper {
+    height: 100vh;
+    max-width: 75rem;
+  }
+  
+  .expand-column-wrapper .col {
+    padding: 0rem;
+    transition: all 0.5s ease-in-out;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  
+  .expand-column-wrapper .col:hover {
+    -webkit-flex-basis: 40%;
+        -ms-flex-preferred-size: 40%;
+            flex-basis: 40%;
+  }
+  
+  .expand-column-wrapper .col:hover .expand-column-content {
+    opacity: 1;
+  }
+  
+  .expand-column-wrapper .expand-column-content {
+    color: #000000;
+    font-weight: bold;
+    opacity: 0;
+    transition: all 0.5s ease-in-out;
+  }
+  
+  @media screen and (max-width: 39.9375em) {
+    .expand-column-wrapper {
+      -webkit-flex-direction: col;
+          -ms-flex-direction: col;
+              flex-direction: col;
+    }
+  }
+  
+  .expand-column-wrapper .col:nth-of-type(1) {
+    background-color:#DC8126;
+    height: 100vh;
+    background-size: cover;
+  }
+  
+  .expand-column-wrapper .col:nth-of-type(2) {
+    background-color:#C6721F;
+    height: 100vh;
+    background-size: cover;
+  }
+  
+  .expand-column-wrapper .col:nth-of-type(3) {
+    background-color:#DC8126;
+    height: 100vh;
+    background-size: cover;
+  }
+  
+  .expand-column-wrapper .col:nth-of-type(4) {
+    background-color:#C6721F;
+    height: 100vh;
+    background-size: cover;
+  }
+  
+  .expand-column-wrapper .col:nth-of-type(5) {
+    background-color:#DC8126;
+    height: 100vh;
+    background-size: cover;
+  }
+  
+  .expand-column-wrapper .col:nth-of-type(6) {
+    background-color:#C6721F;
+    height: 100vh;
+    background-size: cover;
+  }
+  .expand-column-wrapper .col:nth-of-type(7) {
+    background-color:#DC8126;
+    height: 100vh;
+    background-size: cover;
+  }
+  
